--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.1.2",
+    "@apollo/client": "^3.4.16",
+    "@sanity/client": "^2.21.3",
+    "formik": "^2.2.9",
+    "graphql": "^15.6.1",
+    "next": "^12.1.6",
+    "next-query-params": "^2.0.3",
+    "query-string": "^7.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "use-query-params": "^1.2.3"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
     "@types/react": "17.0.30",
     "eslint": "8.0.1",
     "eslint-config-next": "11.1.2",
